--- a/css/style.css
+++ b/css/style.css
@@ -161,11 +161,13 @@ h4 {
   border: none;
   font-size: 16px;
   border-radius: 2px;
-  align-self: flex-start;
+  /* align-self: flex-start; */
   text-decoration: none;
   display: block;
   cursor: pointer;
   margin-top: 10px;
+  text-align: center;
+  border-radius: 20px;
 }
 
 #contact div {
