--- a/css/style.css
+++ b/css/style.css
@@ -123,22 +123,26 @@ h2 {
   font-weight: bold;
 }
 
-.vue-js {
+.technos {
   display: flex;
   flex-direction: column;
   align-items: center;
   height: auto;
 }
 
-.vue-js p {
+.technos p {
   font-weight: 900;
   margin: 0;
   color: #190f33;
   font-size: 16px;
 }
 
-.vue-js img {
+.technos img {
   max-height: 80px;
+}
+
+.ex-background-color {
+  color: #eeeef7;
 }
 #projects p {
   text-align: center;
